--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -10,18 +10,19 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 
-after-startup-command = [
-  'exec-and-forget borders'
-# , 'exec-and-forget sketchybar'
+after-startup-command = ['exec-and-forget borders', 'exec-and-forget sketchybar']
+
+# Notify Sketchybar about workspace change and update icons
+exec-on-workspace-change = ['/bin/bash', '-c', 'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE && ~/.config/sketchybar/plugins/update_workspace_icons.sh']
+
+# Notify Sketchybar about focuse change
+# See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
+on-focus-changed = [
+  'exec-and-forget sketchybar --trigger aerospace_focus_change',
 ]
 
-# Notify Sketchybar about workspace change
-# exec-on-workspace-change = ['/bin/bash', '-c',
-#     'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
-# ]
-
 # Start AeroSpace at login
-start-at-login = false
+start-at-login = true
 
 
 
@@ -67,12 +68,12 @@ preset = 'qwerty'
 #                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 10
-inner.vertical =   10
-outer.left =       5
+inner.horizontal = 15
+inner.vertical =   15
+outer.left =       10
 outer.bottom =     5
-outer.top =        5
-outer.right =      5
+outer.top =        52
+outer.right =      10
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -115,10 +116,12 @@ ctrl-shift-cmd-alt-up = 'focus up'
 ctrl-shift-cmd-alt-right = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-left = 'move left'
-alt-shift-down = 'move down'
-alt-shift-up = 'move up'
-alt-shift-right = 'move right'
+alt-ctrl-cmd-left = 'move left'
+alt-ctrl-cmd-down = 'move down'
+alt-ctrl-cmd-up = 'move up'
+alt-ctrl-cmd-right = 'move right'
+
+ctrl-shift-cmd-alt-enter = 'fullscreen'
 
 ctrl-shift-cmd-alt-h = 'join-with left'
 ctrl-shift-cmd-alt-j = 'join-with down'
@@ -130,72 +133,36 @@ ctrl-shift-cmd-alt-minus = 'resize smart -50'
 ctrl-shift-cmd-alt-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-ctrl-shift-cmd-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
-alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
-alt-c = 'workspace C'
+
+
+ctrl-shift-cmd-alt-e = 'workspace E'
 ctrl-shift-cmd-alt-d = 'workspace D'
-alt-e = 'workspace E'
 ctrl-shift-cmd-alt-f = 'workspace F'
-alt-g = 'workspace G'
 ctrl-shift-cmd-alt-i = 'workspace I'
-ctrl-shift-cmd-alt-m = 'workspace M'
-# alt-n = 'workspace N'
-alt-o = 'workspace O'
-alt-p = 'workspace P'
-alt-q = 'workspace Q'
-alt-r = 'workspace R'
-alt-s = 'workspace S'
-alt-t = 'workspace T'
-alt-u = 'workspace U'
+# ctrl-shift-cmd-alt-m = 'workspace M'
 ctrl-shift-cmd-alt-v = 'workspace V'
-alt-w = 'workspace W'
-alt-x = 'workspace X'
-alt-y = 'workspace Y'
-alt-z = 'workspace Z'
+ctrl-shift-cmd-alt-w = 'workspace W'
+ctrl-shift-cmd-alt-x = 'workspace X'
+ctrl-shift-cmd-alt-z = 'workspace Z'
+
+alt-shift-e = ['move-node-to-workspace E','workspace E']
+alt-shift-d = ['move-node-to-workspace D','workspace D']
+alt-shift-f = ['move-node-to-workspace F','workspace F']
+alt-shift-i = ['move-node-to-workspace I','workspace I']
+# alt-shift-m = ['move-node-to-workspace M','workspace M']
+alt-shift-v = ['move-node-to-workspace V','workspace V']
+alt-shift-w = ['move-node-to-workspace W','workspace W']
+alt-shift-x = ['move-node-to-workspace X','workspace X']
+alt-shift-z = ['move-node-to-workspace Z','workspace Z']
+
+
+
 
 ctrl-shift-cmd-alt-0 = 'layout floating tiling'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
-alt-shift-a = 'move-node-to-workspace A'
-alt-shift-b = 'move-node-to-workspace B'
-alt-shift-c = 'move-node-to-workspace C'
-alt-shift-d = 'move-node-to-workspace D'
-alt-shift-e = 'move-node-to-workspace E'
-alt-shift-f = 'move-node-to-workspace F'
-alt-shift-g = 'move-node-to-workspace G'
-alt-shift-i = 'move-node-to-workspace I'
-alt-shift-m = 'move-node-to-workspace M'
-alt-shift-n = 'move-node-to-workspace N'
-alt-shift-o = 'move-node-to-workspace O'
-alt-shift-p = 'move-node-to-workspace P'
-alt-shift-q = 'move-node-to-workspace Q'
-alt-shift-r = 'move-node-to-workspace R'
-alt-shift-s = 'move-node-to-workspace S'
-alt-shift-t = 'move-node-to-workspace T'
-alt-shift-u = 'move-node-to-workspace U'
-alt-shift-v = 'move-node-to-workspace V'
-alt-shift-w = 'move-node-to-workspace W'
-alt-shift-x = 'move-node-to-workspace X'
-alt-shift-y = 'move-node-to-workspace Y'
-alt-shift-z = 'move-node-to-workspace Z'
+
+
+
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 # alt-tab = 'workspace-back-and-forth'
@@ -227,6 +194,59 @@ end tell'
 
 ctrl-shift-cmd-alt-b = 'balance-sizes'
 
+# alt-1 = 'workspace 1'
+# alt-2 = 'workspace 2'
+# alt-3 = 'workspace 3'
+# alt-4 = 'workspace 4'
+# alt-5 = 'workspace 5'
+# alt-6 = 'workspace 6'
+# alt-7 = 'workspace 7'
+# ctrl-shift-cmd-alt-8 = 'workspace 8'
+# alt-9 = 'workspace 9'
+# alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
+# alt-b = 'workspace B'
+# alt-c = 'workspace C'
+# alt-e = 'workspace E'
+# alt-g = 'workspace G'
+# alt-n = 'workspace N'
+# alt-o = 'workspace O'
+# alt-p = 'workspace P'
+# alt-q = 'workspace Q'
+# alt-r = 'workspace R'
+# alt-s = 'workspace S'
+# alt-t = 'workspace T'
+# alt-u = 'workspace U'
+# alt-x = 'workspace X'
+# alt-y = 'workspace Y'
+# alt-z = 'workspace Z'
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
+# alt-shift-1 = 'move-node-to-workspace 1'
+# alt-shift-2 = 'move-node-to-workspace 2'
+# alt-shift-3 = 'move-node-to-workspace 3'
+# alt-shift-4 = 'move-node-to-workspace 4'
+# alt-shift-5 = 'move-node-to-workspace 5'
+# alt-shift-6 = 'move-node-to-workspace 6'
+# alt-shift-7 = 'move-node-to-workspace 7'
+# alt-shift-8 = 'move-node-to-workspace 8'
+# alt-shift-9 = 'move-node-to-workspace 9'
+# alt-shift-a = 'move-node-to-workspace A'
+# alt-shift-b = 'move-node-to-workspace B'
+# alt-shift-c = 'move-node-to-workspace C'
+# alt-shift-e = 'move-node-to-workspace E'
+# alt-shift-g = 'move-node-to-workspace G'
+# alt-shift-m = 'move-node-to-workspace M'
+# alt-shift-n = 'move-node-to-workspace N'
+# alt-shift-o = 'move-node-to-workspace O'
+# alt-shift-p = 'move-node-to-workspace P'
+# alt-shift-q = 'move-node-to-workspace Q'
+# alt-shift-r = 'move-node-to-workspace R'
+# alt-shift-s = 'move-node-to-workspace S'
+# alt-shift-t = 'move-node-to-workspace T'
+# alt-shift-u = 'move-node-to-workspace U'
+# alt-shift-y = 'move-node-to-workspace Y'
+# alt-shift-z = 'move-node-to-workspace Z'
+
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
 
@@ -249,10 +269,13 @@ shift-down = ['volume set 0', 'mode main']
 
 [[on-window-detected]]
 if.app-id ='com.hnc.Discord'
-run = ['move-node-to-workspace M']
+run = ['move-node-to-workspace D']
 
 [[on-window-detected]]
 if.app-id ='com.spotify.client'
-run = ['move-node-to-workspace 2']
+run = ['move-node-to-workspace W']
 
+[[on-window-detected]]
+if.app-id ='com.microsoft.VSCode'
+run = ['move-node-to-workspace E']
 
