--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -110,10 +110,10 @@ alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-ctrl-shift-cmd-alt-left = 'focus left'
-ctrl-shift-cmd-alt-down = 'focus down'
-ctrl-shift-cmd-alt-up = 'focus up'
-ctrl-shift-cmd-alt-right = 'focus right'
+ctrl-shift-cmd-alt-h = 'focus left'
+ctrl-shift-cmd-alt-j = 'focus down'
+ctrl-shift-cmd-alt-k = 'focus up'
+ctrl-shift-cmd-alt-l = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 alt-ctrl-cmd-left = 'move left'
@@ -123,10 +123,10 @@ alt-ctrl-cmd-right = 'move right'
 
 ctrl-shift-cmd-alt-enter = 'fullscreen'
 
-ctrl-shift-cmd-alt-h = 'join-with left'
-ctrl-shift-cmd-alt-j = 'join-with down'
-ctrl-shift-cmd-alt-k = 'join-with up'
-ctrl-shift-cmd-alt-l = 'join-with right'
+ctrl-shift-cmd-alt-left = 'join-with left'
+ctrl-shift-cmd-alt-down = 'join-with down'
+ctrl-shift-cmd-alt-up = 'join-with up'
+ctrl-shift-cmd-alt-right = 'join-with right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 ctrl-shift-cmd-alt-minus = 'resize smart -50'
@@ -135,20 +135,22 @@ ctrl-shift-cmd-alt-equal = 'resize smart +50'
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 
 
+ctrl-shift-cmd-alt-c = 'workspace C'
 ctrl-shift-cmd-alt-e = 'workspace E'
 ctrl-shift-cmd-alt-d = 'workspace D'
 ctrl-shift-cmd-alt-f = 'workspace F'
-ctrl-shift-cmd-alt-i = 'workspace I'
+# ctrl-shift-cmd-alt-i = 'workspace I'
 # ctrl-shift-cmd-alt-m = 'workspace M'
 ctrl-shift-cmd-alt-v = 'workspace V'
 ctrl-shift-cmd-alt-w = 'workspace W'
 ctrl-shift-cmd-alt-x = 'workspace X'
 ctrl-shift-cmd-alt-z = 'workspace Z'
 
+alt-shift-c = ['move-node-to-workspace C','workspace C']
 alt-shift-e = ['move-node-to-workspace E','workspace E']
 alt-shift-d = ['move-node-to-workspace D','workspace D']
 alt-shift-f = ['move-node-to-workspace F','workspace F']
-alt-shift-i = ['move-node-to-workspace I','workspace I']
+# alt-shift-i = ['move-node-to-workspace I','workspace I']
 # alt-shift-m = ['move-node-to-workspace M','workspace M']
 alt-shift-v = ['move-node-to-workspace V','workspace V']
 alt-shift-w = ['move-node-to-workspace W','workspace W']
@@ -278,4 +280,8 @@ run = ['move-node-to-workspace W']
 [[on-window-detected]]
 if.app-id ='com.microsoft.VSCode'
 run = ['move-node-to-workspace E']
+
+[[on-window-detected]]
+if.app-id ='com.toggl.daneel'
+run = ['move-node-to-workspace Z']
 
